--- a/frontend/src/pages/ProfessorHome/ProfessorHome.module.css
+++ b/frontend/src/pages/ProfessorHome/ProfessorHome.module.css
@@ -38,9 +38,8 @@ main {
 
 .insightsContainer {
   display: flex;
-  width: min-content;
+  flex-wrap: wrap;
   gap: 50px;
   margin-top: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  justify-content: center;
 }
